fix(DynamicPage/ObjectPage): increase header z-index
Prevents that parts of some Web Components (e.g. `Slider`) are shining through the header content

Fixes #6107

--- a/packages/main/src/components/DynamicPage/DynamicPage.module.css
+++ b/packages/main/src/components/DynamicPage/DynamicPage.module.css
@@ -51,7 +51,7 @@
   position: sticky;
   box-shadow: var(--sapContent_HeaderShadow);
   height: 1px;
-  z-index: 2;
+  z-index: 3;
 
   > section[data-component-name='DynamicPageAnchorBar'] {
     inset-block-start: 0;
